--- a/style.css
+++ b/style.css
@@ -1,22 +1,42 @@
 body {
-  font-family: "Lato", sans-serif;
+  font-family: "Trebuchet", sans-serif;
   font-size: 12pt;
   font-weight: 300;
   line-height: 125%;
-  margin: 5% 10% 5% 10%; /* top right bottom left */
+  margin: 3% 20% 5% 15%; /* top right bottom left */
+}
+
+hr {
+    display: block;
+    border: 1px dotted gray;
+    align: left;
+    width: 65%;
+    margin-top: 1.5em;
+    margin-bottom: 1.5em;
+    margin-left: 0%;
+    margin-right: 10%;
+    border-width: 1px;
+}
+
+table, ul {
+    margin: 0em;
+    margin-bottom: 0.5em;
 }
 
 h1, h2, h3, h4, h5 {
-  font-family: "Volkhov", serif;
+  font-family: "Raleway", sans-serif;
+  color: #404040;
+  margin-bottom: 0.5em;
+  line-height: 100%;
 }
 
-.heavy {
-  font-family: "Lato", sans-serif;
-  font-weight: 400;
+b {
+    font-family: "Raleway", sans-serif;
+    color: #404040;
 }
 
 h1, .contact {
-  font-family: "Volkhov", serif;
+  font-family: "Raleway", sans-serif;
   /*font-weight: bold;*/
   color: #404040;
 }
@@ -26,7 +46,7 @@ h1, .contact {
 }
 
 .footer {
-  font-family: "Lato";
+  font-family: "Trebuchet", sans-serif;
   font-size: 90%;
   color: #ababab;
   text-align: right;
@@ -44,38 +64,38 @@ hr.footer {
 }
 
 a:link {
-  color: #003366;
-  font-weight: 400;
-  text-decoration: none;
+    color: #c45f0d;
+    font-weight: 400;
+    text-decoration: none;
 }
 
 a:visited {
-  color: #003333;
+    color: #c43c33;
 }
 
 a:hover {
-  color: #009999;
-  text-decoration: underline;
+    color: #e0731a;
+    text-decoration: underline;
 }
 
 .nav {
-  width: 15%;
+  width: 20%;
   margin: 0;
-  padding: 12px 16px;
+  padding: 0px 10px;
   list-style-type: none;
-  font-family: "Lato", sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 400;
-  font-size: 100%;
+  font-size: 110%;
   text-align: right;
-  color: #404040;
-  float: left;
+  color: #0b7737;
+  float: right;
   overflow: hidden;
 }
 
 .nav li a {
   display: block;
   padding: 5px 5px;
-  color: #404040;
+  color: #034c3f;
   font-weight: 400;
   text-decoration: none;
 }
