--- a/style.css
+++ b/style.css
@@ -109,6 +109,13 @@ a:hover {
   color: white;
 }
 
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
 table {
   border-spacing: 10px;
   text-align: left;
